Add SupportedDestinationSyncModes to destination specs objects
