# airbyte-server/src/main/java/io/airbyte/server/handlers/SchedulerHandler.java
@@ -32,6 +32,7 @@ import io.airbyte.api.model.DestinationCoreConfig;
 import io.airbyte.api.model.DestinationDefinitionIdRequestBody;
 import io.airbyte.api.model.DestinationDefinitionSpecificationRead;
 import io.airbyte.api.model.DestinationIdRequestBody;
+import io.airbyte.api.model.DestinationSyncMode;
 import io.airbyte.api.model.DestinationUpdate;
 import io.airbyte.api.model.JobIdRequestBody;
 import io.airbyte.api.model.JobInfoRead;
@@ -73,6 +74,7 @@ import io.temporal.api.workflowservice.v1.RequestCancelWorkflowExecutionRequest;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 public class SchedulerHandler {
 
@@ -247,6 +249,10 @@ public class SchedulerHandler {
     final ConnectorSpecification spec = response.getOutput();
     return new DestinationDefinitionSpecificationRead()
         .jobInfo(JobConverter.getSynchronousJobRead(response))
+        .supportedSyncModes(spec.getSupportedDestinationSyncModes()
+            .stream()
+            .map(m -> Enums.convertTo(m, DestinationSyncMode.class))
+            .collect(Collectors.toList()))
         .connectionSpecification(spec.getConnectionSpecification())
         .documentationUrl(spec.getDocumentationUrl().toString())
         .destinationDefinitionId(destinationDefinitionId);
